org directors and background

--- a/sponsors.html
+++ b/sponsors.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <!-- change font, colors -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>H.A.R.D. Hack | Sponsors</title>
@@ -246,7 +247,7 @@
     <tr>
       <th>
         <h3 style="text-align:left;">HKN HARD Hack Director</h3>
-        Brandon Imai<br>bimai@ucsd.edu
+        Ethan Jenkins<br>etjenkins@ucsd.edu
       </th>
       <td style="align-items:center;">
         <img src="assets/images/hknlogo.png" alt="HKN Logo" style="height: 10vh; width: auto; flex-shrink: 0; align-self:center;" />
@@ -254,11 +255,9 @@
     </tr>
     <tr>
       <th>
-        <h3 style="text-align:left;">IEEE HARD Hack Co-Director</h3>
-        Yash Puneet<br>ypuneet@ucsd.edu
+        <h3 style="text-align:left;">IEEE HARD Hack Director</h3>
+        Rahil Kadekar<br>rkadekar@ucsd.edu
         <br>
-        <h3 style="text-align:left;">IEEE HARD Hack Co-Director</h3>
-        Brigette Hacia<br>bhacia@ucsd.edu
       </th>
       <td>
         <img src="assets/images/ieeelogo.png" alt="IEEE Logo" style="height: 18vh; width: auto; flex-shrink: 0; align-self:center" />
@@ -266,8 +265,10 @@
     </tr>
     <tr>
       <th>
-        <h3 style="text-align:left;">TNT HARD Hack Director</h3>
-        Ishika Agrawal<br>iagrawal@ucsd.edu
+        <h3 style="text-align:left;">TNT HARD Hack Co-Director</h3>
+        Siya Jatia<br>sjatia@ucsd.edu
+        <h3 style="text-align:left;">TNT HARD Hack Co-Director</h3>
+        Pranav Sakhuja<br>psakhuja@ucsd.edu
       </th>
       <td>
         <img src="assets/images/tntlogo.png" alt="TNT Logo" style="height: 17vh; width: auto; flex-shrink: 0; align-self:center;" />
