uploaded "Tomorrow" fonts and updated style for sponsors page

--- a/sponsors.html
+++ b/sponsors.html
@@ -106,6 +106,8 @@
 <!-- SPONSORS FAQ -->
 
 <h1 style="
+      color: #fff3ce;
+      text-shadow: 3px 3px 0 #be8f14;
       margin-bottom:1em;
       font-size:calc(1em + 3vw);
       margin-top:4em;
@@ -126,11 +128,11 @@
 </div>
 
 <div class="text-page" style="min-height: auto;">
-  <h1 style="margin-bottom:1em">Become a Sponsor</h1>
+  <h1 style="margin-bottom:1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Become a Sponsor</h1>
 
   <p class="basic-paragraph" style="padding-bottom: 10px">
     <strong>We promise you...</strong>
-  <ul style="font-family: Poppins; color: white">
+  <ul style="font-family: Tomorrow; color:white">
     <li>Active involvement in the event planning process,</li>
     <li>Direct interaction with our competitve talent pool,</li>
     <li>Flexible organization of technical and professional workshops,</li>
@@ -145,7 +147,7 @@
 </div>
 
 <div style="padding-bottom: max(3em, 3vh);">
-  <h1 style="margin-bottom:1em">Sponsorship Tiers</h1>
+  <h1 style="margin-bottom:1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Sponsorship Tiers</h1>
   <table class="sponsorship-table">
     <tr>
       <th></th>
@@ -206,7 +208,7 @@
 
 <div id="benefits-glossary">
   <!-- TODO: Add padding above glossary -->
-  <h1>Benefits Glossary</h1>
+  <h1 style="color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Benefits Glossary</h1>
   <table class="benefits-table" style="padding-bottom:max(4em, 4vh)">
     <tr>
       <th>Benefit</th>
@@ -246,7 +248,7 @@
   <table class="directors-table">
     <tr>
       <th>
-        <h3 style="text-align:left;">HKN HARD Hack Director</h3>
+        <h3 style="text-align:left; color: #153cb4">HKN HARD Hack Director</h3>
         Ethan Jenkins<br>etjenkins@ucsd.edu
       </th>
       <td style="align-items:center;">
@@ -255,7 +257,7 @@
     </tr>
     <tr>
       <th>
-        <h3 style="text-align:left;">IEEE HARD Hack Director</h3>
+        <h3 style="text-align:left; color: #153cb4">IEEE HARD Hack Director</h3>
         Rahil Kadekar<br>rkadekar@ucsd.edu
         <br>
       </th>
@@ -265,9 +267,9 @@
     </tr>
     <tr>
       <th>
-        <h3 style="text-align:left;">TNT HARD Hack Co-Director</h3>
+        <h3 style="text-align:left; color: #153cb4">TNT HARD Hack Co-Director</h3>
         Siya Jatia<br>sjatia@ucsd.edu
-        <h3 style="text-align:left;">TNT HARD Hack Co-Director</h3>
+        <h3 style="text-align:left; color: #153cb4">TNT HARD Hack Co-Director</h3>
         Pranav Sakhuja<br>psakhuja@ucsd.edu
       </th>
       <td>
@@ -281,7 +283,7 @@
 
         <!-- ASK QUESTIONS -->
         <div class="center" id="questions-div" style="padding-bottom: 4em">
-          <h1 style="margin-bottom: 1em">Any More Questions?</h1>
+          <h1 style="margin-bottom: 1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Any More Questions?</h1>
           <form id="questionsForm">
             <input
               type="text"
