--- a/sponsors.html
+++ b/sponsors.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <!-- change font, colors -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>H.A.R.D. Hack | Sponsors</title>
@@ -283,19 +282,19 @@
 
         <!-- ASK QUESTIONS -->
         <div class="center" id="questions-div" style="padding-bottom: 4em">
-          <h1 style="margin-bottom: 1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Any More Questions?</h1>
+          <h1 style="margin-bottom: 1em">Any More Questions?</h1>
           <form id="questionsForm">
             <input
               type="text"
               id="email"
               placeholder="Email"
               style="
-                font-family: Tomorrow;
                 width: min(80%, 600px);
                 height: 36px;
                 margin-bottom: 16px;
                 border-radius: 8px;
-                padding: 10px;
+                padding-left: 10px;
+                padding-right: 10px;
                 border: none;
               "
             />
@@ -306,17 +305,12 @@
               rows="10"
               cols="50"
               placeholder="Enter Your Question Here..."
-              style=
-                "font-family: Tomorrow; 
-                width: min(80%, 600px); 
-                padding: 10px; 
-                border-radius: 8px; 
-                border: none;"
+              style="width: min(80%, 600px); padding: 10px; border-radius: 8px"
             ></textarea>
           </form>
           <br />
     
-          <button onclick="submitForm()" class="projects-button center main-font" style="font-family: Tomorrow">
+          <button onclick="submitForm()" class="projects-button center main-font">
             Submit Form
           </button>
           <p id="error"></p>
@@ -338,7 +332,7 @@
                 "Question Field Cannot Be Empty";
             } else {
               let url =
-                "https://docs.google.com/forms/d/e/1FAIpQLScCxzKi5_67jKD9_eaozGTnyLAFV5Jmlz1ku3ZVqKm3PMqH-g/formResponse";
+                "https://docs.google.com/forms/d/e/1FAIpQLScq_QdWo8Y_mPnKSTRerhu11__t2NwnedWEzKvqf5_13xtTgQ/formResponse?usp=pp_url";
               url +=
                 "&entry.333490010=" +
                 encodeURIComponent(email) +
@@ -354,5 +348,39 @@
             }
           }
         </script>
+
+    
+
+    <!-- SOCIALS -->
+    <!-- <div id="socials">
+      <p
+        class="center"
+        style="
+          text-align: center;
+          font-family: Poppins;
+          width: max(45vw, 300px);
+        "
+      >
+        If you have any more questions, feel free to email us at
+        <a
+          style="font-family: Poppins; color: white"
+          href="mailto:hardhack@eng.ucsd.edu"
+          >hardhack@eng.ucsd.edu</a
+        >.
+      </p>
+      <br />
+      <div id="icons">
+        <a href="mailto:hardhack@eng.ucsd.edu">
+          <img class="email" src="./assets/social_icons/email.svg"
+        /></a>
+        <a
+          href="https://www.instagram.com/hardhackucsd/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img class="instagram" src="./assets/social_icons/instagram.svg"
+        /></a>
+      </div>
+    </div> -->
   </body>
 </html>
