style changes to headings

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
           font-size: 1em;
           font-family: Tomorrow;
           font-weight: 400;
+          color: #153cb4;
           padding-bottom: max(3em, 3vh);
           max-width: min(700px, 80vw);
           margin: 0 auto;
@@ -248,7 +249,7 @@
 
     <!-- FAQ -->
     <div id="faq-page">
-      <h1 style="margin-bottom:1em">FAQ</h1>
+      <h1 style="margin-bottom:1em; color: #153cb4">FAQ</h1>
       <dropdown-box
         header="What is a hackathon?"
         text="A hackathon is a gathering where people collaboratively build a project from the ground-up over a short period of time. While working on a particular project, the idea is for each group member to have the ability and freedom to work on whatever they want."
@@ -306,7 +307,7 @@
 
         <!-- ASK QUESTIONS -->
         <div class="center" id="questions-div" style="padding-bottom: 4em">
-          <h1 style="margin-bottom: 1em">Any More Questions?</h1>
+          <h1 style="margin-bottom: 1eml; color: #153cb4">Any More Questions?</h1>
           <form id="questionsForm">
             <input
               type="text"
