update logo and banner

--- a/index.html
+++ b/index.html
@@ -110,12 +110,15 @@
               class="center"
               src="./assets/images/hard_hack_logo.png"
               style="
-                max-height: 400px;
-                min-height: 157px;
+                max-height: 800px;
+                min-height: 250px;
                 display: block;
                 flex: 6 6 60%;
-                width: 50vw;
+                width: 100vw;
                 object-fit: contain;
+                cursor: zoom-in;
+                margin: auto;
+                margin-left: -50px;
               "
             />
             <p
