organize page layout

--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
               class="center"
               src="./assets/images/hard_hack_logo.png"
               style="
-                max-height: 800px;
-                min-height: 250px;
+                max-height: 700px;
+                min-height: 500px;
                 display: block;
                 flex: 6 6 60%;
                 width: 100vw;
                 object-fit: contain;
                 cursor: zoom-in;
                 margin: auto;
-                margin-left: -50px;
+                margin-left: -100px;
               "
             />
             <p
@@ -138,25 +138,26 @@
             >
               February 1 - 2
             </h3>
+            <a
+              id="apply-link"
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
+              style="display: block; font-size: min(2.5vh, 1em); position: sticky"
+              target="_blank"
+              ><button
+                class="big-button center main-font"
+                style="font-weight: 700; font-size: max(16px, min(5vw, 1.5em))"
+              >
+                Apply Now
+              </button></a
+            >
           </div>
         </div>
       </div>
-      <a
-        id="apply-link"
-        href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
-        style="display: block; font-size: min(2.5vh, 1em); position: sticky"
-        target="_blank"
-        ><button
-          class="big-button center main-font"
-          style="font-weight: 700; font-size: max(16px, min(5vw, 1.5em))"
-        >
-          Apply Now
-        </button></a
-      >
+      
     </div>
 
     <div id="about-page">
-      <h1 style="margin-bottom:1em">About</h1>
+      <h1 style="margin-bottom:1em; margin-top: 40px">About</h1>
       <p
         style="
           font-size: 1em;
@@ -167,6 +168,7 @@
           max-width: min(700px, 80vw);
           margin: 0 auto;
           text-align: left;
+          display: flex;
         "
       >
         H.A.R.D. Hack is a hardware hackathon that HKN holds annually in collaboration 
