title style change

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </div>
 
     <div id="about-page">
-      <h1 style="margin-bottom:1em; margin-top: 40px">About</h1>
+      <h1 style="margin-bottom:1em; margin-top: 40px; color: #153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3)">About</h1>
       <p
         style="
           font-size: 1em;
@@ -254,7 +254,7 @@
 
     <!-- FAQ -->
     <div id="faq-page">
-      <h1 style="margin-bottom:1em; color: #153cb4">FAQ</h1>
+      <h1 style="margin-bottom:1em; color: #153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">FAQ</h1>
       <dropdown-box
         header="What is a hackathon?"
         text="A hackathon is a gathering where people collaboratively build a project from the ground-up over a short period of time. While working on a particular project, the idea is for each group member to have the ability and freedom to work on whatever they want."
@@ -312,7 +312,7 @@
 
         <!-- ASK QUESTIONS -->
         <div class="center" id="questions-div" style="padding-bottom: 4em">
-          <h1 style="margin-bottom: 1em; color: #153cb4">Any More Questions?</h1>
+          <h1 style="margin-bottom: 1em; color: #153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Any More Questions?</h1>
           <form id="questionsForm">
             <input
               type="text"
