--- a/index.html
+++ b/index.html
@@ -140,15 +140,18 @@
             </h3>
             <a
               id="apply-link"
+              class="big-button center main-font"
               href="https://docs.google.com/forms/d/e/1FAIpQLSeseq3WlXBgjBstpkevuf67iK4hSnYpBexU1laiWSPNzs9Osg/viewform?usp=header"
-              style="display: block; font-size: min(2.5vh, 1em); position: sticky"
+              style="
+                display: inline-block;
+                font-size: min(2.5vh, 1em);
+                position: sticky;
+                font-weight: 700;
+                font-size: max(16px, min(5vw, 1.5em));
+                text-decoration: none;"
               target="_blank"
-              ><button
-                class="big-button center main-font"
-                style="font-weight: 700; font-size: max(16px, min(5vw, 1.5em))"
               >
-                Apply Now
-              </button></a
+                Apply Now</a
             >
           </div>
         </div>
@@ -163,7 +166,6 @@
           font-size: 1em;
           font-family: Tomorrow;
           font-weight: 400;
-          color: #153cb4;
           padding-bottom: max(3em, 3vh);
           max-width: min(700px, 80vw);
           margin: 0 auto;
@@ -197,7 +199,7 @@
           justify-content: center;
           align-items: center;
           flex-direction: row;
-          margin-bottom: 2em;
+          margin-bottom: 1em;
           flex-wrap: wrap;
         "
       >
@@ -214,41 +216,47 @@
           style="height: auto; width: 100px; flex-shrink: 0"
         />
       </div>
+    </div>
 
       <!-- VIEW PREVIOUS PROJECTS BUTTONS -->
+    <div
+      style="
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      "
+    >
       <a
         id="2020-projects-link"
         href="https://h-a-r-d-hack-2020.devpost.com/"
+        class="projects-button center main-font"
         target="_blank"
         style="
-          display: block;
-          font-size: min(1.8vh, 0.7em);
+          display: inline-block;
+          margin-bottom: 1em;
+          font-size: min(2.5vh, 1em);
           position: sticky;
-          padding-bottom: max(2em, 2vh);
+          text-align: center;
+          font-weight: 700;
+          text-decoration: none;
         "
-        ><button
-          class="projects-button center main-font"
-          style="font-weight: 700; font-size: max(16px, min(5vw, 1.5em))"
-        >
-          View 2020 Projects
-        </button></a
+      >View 2020 Projects</a
       >
       <a
         id="2019-projects-link"
+        class="projects-button center main-font"
         href="https://hard-hack-2019.devpost.com/"
         target="_blank"
         style="
-          display: block;
+          display: inline-block;
           margin-bottom: 5em;
-          font-size: min(1.8vh, 0.7em);
+          font-size: min(2.5vh, 1em);
           position: sticky;
+          text-align: center;
+          font-weight: 700;
+          text-decoration: none;
         "
-        ><button
-          class="projects-button center main-font"
-          style="font-weight: 700; font-size: max(16px, min(5vw, 1.5em))"
-        >
-          View 2019 Projects
-        </button></a
+      >View 2019 Projects</a
       >
     </div>
 
