use flex box for spacing

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div id="cover-page">
       <div id="cover-flex">
         <div>
-          <div style="max-height: 60vh; display: flex; flex-direction: column">
+          <div style="max-height: 60vh; display: flex; flex-direction: column; gap: 1em;">
             <img
               class="center"
               src="./assets/images/hard_hack_logo.png"
@@ -117,7 +117,6 @@
                 width: 90vw;
                 object-fit: contain;
                 cursor: zoom-in;
-                margin: auto;
               "
             />
             <p
@@ -144,7 +143,6 @@
               style="
                 display: inline-block;
                 font-size: min(2.5vh, 1em);
-                position: sticky;
                 font-weight: 700;
                 font-size: max(16px, min(5vw, 1.5em));
                 text-decoration: none;"
