--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
               src="./assets/images/hard_hack_logo.png"
               style="
                 max-height: 600px;
+                min-height: 50vh;
                 display: block;
                 flex: 6 6 60%;
                 width: 90vw;
