--- a/sponsors.html
+++ b/sponsors.html
@@ -277,9 +277,9 @@
     </tr>
   </table>
 
-  <div id="sponsors-logo" style="display: flex; flex-direction: column; align-items: center;">
+  <div id="sponsors-logo" style="display: flex; flex-direction: column;">
     <h1 style="margin-top: 4em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
-      <div id="logo-container">
+      <div id="logo-container" style="display: flex; align-items: center;">
         <img
           src="assets/images/digi_key_logo.png"
           alt="Sponsor 1 Logo"
