--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
           font-size: 1em;
           font-family: Tomorrow;
           font-weight: 400;
-          padding-bottom: max(3em, 3vh);
           max-width: min(700px, 80vw);
-          margin: 0 auto;
           text-align: left;
           display: flex;
         "
@@ -207,7 +205,7 @@
       </div>
     </div>
 
-      <!-- VIEW PREVIOUS PROJECTS BUTTONS -->
+    <!-- VIEW PREVIOUS PROJECTS BUTTONS -->
     <div
       style="
       display: flex;
@@ -247,6 +245,22 @@
         "
       >View 2019 Projects</a
       >
+    </div>
+
+    <div id="sponsors-logo" style="display: flex; flex-direction: column;">
+      <h1 style="margin-top: 2em; margin-bottom: 1em; color:#153cb4; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);">Our Sponsors</h1>
+        <div id="logo-container" style="padding-bottom: 4em; display: flex; justify-content: center; align-items: center;">
+          <img
+            src="assets/images/digi_key_logo.png"
+            alt="Sponsor 1 Logo"
+            style="width: 300px; margin-top: -60px;"
+          />
+          <img
+            src="assets/images/qualcomm_logo.png"
+            alt="Sponsor 2 Logo"
+            style="width: 300px; margin-bottom: 4em;"
+          />
+        </div>
     </div>
 
     <!-- FAQ -->
