add 2025 dev post submissions

--- a/submissions.html
+++ b/submissions.html
@@ -146,6 +146,11 @@
       <a href="/index"><span>Home</span></a>
       <a href="/sponsors"><span>Sponsor Us</span></a>
       <a href="/submissions"><span>2024 Projects</span></a>
+      <a
+        href="https://hard-hack-2025.devpost.com/"
+        target="_blank"
+      ><span>Submit Your Project</span>
+      </a>
     </div>
     <div id="dropdown-menu-bar" class="background-element">
       <div
