--- a/sponsors.html
+++ b/sponsors.html
@@ -88,7 +88,7 @@
           <a
             href="https://hard-hack-2025.devpost.com/"
             target="_blank"
-          ><span>Submit Your Project</span>
+          ><p>Submit Your Project</p>
           </a>
         </div>
       </div>
