Update digikey logo

--- a/sponsors.html
+++ b/sponsors.html
@@ -283,12 +283,12 @@
         <img
           src="assets/images/digi_key_logo.png"
           alt="Sponsor 1 Logo"
-          style="width: 300px; margin-top: -60px;"
+          style="height: 67px;"
         />
         <img
           src="assets/images/qualcomm_logo.png"
           alt="Sponsor 2 Logo"
-          style="width: 300px; margin-bottom: 4em;"
+          style="height: 60px; margin-top: 2em; margin-bottom: 4em;"
         />
       </div>
   </div>
