--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
         <div id="logo-container" style="padding-bottom: 4em; display: flex; justify-content: center; align-items: center;">
           <img
             src="assets/images/digi_key_logo.png"
-            alt="Sponsor 1 Logo"
-            style="width: 300px; margin-top: -60px;"
+            alt="DigiKey"
+            style="height: 67px;"
           />
           <img
             src="assets/images/qualcomm_logo.png"
-            alt="Sponsor 2 Logo"
-            style="width: 300px; margin-bottom: 4em;"
+            alt="Qualcomm Logo"
+            style="height: 60px; margin-top: 2em; margin-bottom: 4em;"
           />
         </div>
     </div>
